feat: add history ui and api
